<resources>
    <string name="app_name">E-biz</string>
    <string name="button">Contact Us</string>
    <string name="head1">Hello User!</string>
    <string name="button6">Home</string>
    <string name="button1">Feedback</string>
    <string name="button7">Idea</string>
    <string name="button2">LogOut</string>
    <string name="button8">Account</string>
    <string name="button9">Settings</string>
    <string name="button10">Deal Flow</string>
    <string name="button11">Investment</string>
    <string name="button5">Back</string>
    <string name="head2">Check your Deal Flow here</string>
    <string name="button12">New Deal</string>
    <string name="button13">View my deals</string>
    <string name="button14">Due diligence check List</string>
    <string name="head3">Add a New Deal Here</string>
    <string name="head4">Entrepreneur Details</string>
    <string name="editText1">Name</string>
    <string name="editText2">Entrepreneur ID</string>
    <string name="editText3">Address</string>
    <string name="editText4">Phone</string>
    <string name="button15">Next</string>
    <string name="editText5">Entrepreneur Type</string>
    <string name="checkBox">Jewellery maker</string>
    <string name="checkBox2">Fabric design</string>
    <string name="checkBox3">House hold design</string>
    <string name="checkBox4">Event planing</string>
    <string name="checkBox5">Electronic repair</string>
    <string name="checkBox6">Dog walking</string>
    <string name="head5">Investor Details</string>
    <string name="editText6">Investor Name</string>
    <string name="editText7">Investor ID</string>
    <string name="editText8">Agreement schedule (DD/MM/YYYY)</string>
    <string name="button3">Submit</string>
    <string name="button4">Agreement</string>
    <string name="button16">Back</string>
    <string name="head6">Your New Deal Request Submitted Successfully!!</string>
    <string name="button18">Back to Deal Flow</string>
    <string name="head7">View your Deal details Here</string>
    <string name="editText9">Enter the Entrepreneur Name Here</string>
    <string name="button19">View</string>
    <string name="button20">Back</string>
    <string name="head8">Add Your Due Diligence CheckList Here</string>
    <string name="button22">Delete</string>
    <string name="head9">Deal approached Entrepreneur Name</string>
    <string name="head10">Status</string>
    <string name="head11">CheckList</string>
    <string name="checkBox8">Contract and Agreement</string>
    <string name="checkBox7">Investment</string>
    <string name="checkBox9">High financial performance</string>
    <string name="checkBox10">Legal claims</string>
    <string name="checkBox11">Update on Evolution</string>
    <string name="checkBox12">Convenient entrepreneur service</string>
    <string name="head12">Complete Percentage</string>
    <string name="button27">Update</string>
    <string name="head13">Update Due Diligence</string>
    <string name="head14">Settings</string>
    <string name="switch1">Accessibility</string>
    <string name="switch2">Dark Mode</string>
    <string name="switch3">Notification</string>
    <string name="switch4">Sound</string>
    <string name="switch5">Show Password</string>
    <string name="head15">View Profile</string>
    <string name="head16">Account ID</string>
    <string name="textView4">Agreement Date</string>
    <string name="button50">Update Due Diligance</string>
    <string name="text000">About</string>
    <string name="text001">Version</string>
    <string name="text002">1.0.0.1</string>
    <string name="text003">Backup</string>
    <string name="text004">Available</string>
    <string name="text005">Notification</string>
    <string name="text006">service available</string>
    <string name="text007">Version</string>
    <string name="text008">1.0.0.1</string>
    <string name="text00x">General</string>
    <string name="notify_btn">Get Notification</string>






</resources>