<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_dealActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="254dp">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView12"
                app:srcCompat="@drawable/top_gradle" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="414dp"
                android:layout_height="255dp"
                app:srcCompat="@drawable/top_background"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="-3dp" />

            <TextView
                android:id="@+id/head3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head3"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textSize="45dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView14"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.586" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/head4"
                    android:layout_width="317dp"
                    android:layout_height="74dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/head4"
                    android:layout_marginLeft="10dp"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/editText1"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/editText2"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/editText3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/editText4"
                    android:textSize="20dp"/>

                <Button
                    android:id="@+id/button15"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/button15" />

                <Button
                    android:id="@+id/button17"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button16"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="50dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>